[package]
name = "webservice"
version = "0.1.0"
edition = "2021"
default-run = "teacher-service"

[[bin]]
name = "server1"
path = "src/bin/server1.rs"

[[bin]]
name = "teacher-service"
path = "src/bin/teacher-service.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
actix-rt ="1.1.1"
serde = {version = "1.0.132", features = ["derive"]}
chrono = {version = "0.4.19", features = ["serde"]}